src/objects/WorkOrder.object
<CustomObject>
    <fields>
        <fullName>City__c</fullName>
        <label>City</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Province__c</controllingField>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>安徽-安庆</fullName>
                </value>
                <value>
                    <fullName>安徽-蚌埠</fullName>
                </value>
                <value>
                    <fullName>安徽-亳州</fullName>
                </value>
                <value>
                    <fullName>安徽-巢湖</fullName>
                </value>
                <value>
                    <fullName>安徽-池州</fullName>
                </value>
                <value>
                    <fullName>安徽-滁州</fullName>
                </value>
                <value>
                    <fullName>安徽-阜阳</fullName>
                </value>
                <value>
                    <fullName>安徽-合肥</fullName>
                </value>
                <value>
                    <fullName>安徽-淮北</fullName>
                </value>
                <value>
                    <fullName>安徽-淮南</fullName>
                </value>
                <value>
                    <fullName>安徽-黄山</fullName>
                </value>
                <value>
                    <fullName>安徽-六安</fullName>
                </value>
                <value>
                    <fullName>安徽-马鞍山</fullName>
                </value>
                <value>
                    <fullName>安徽-其它城市</fullName>
                </value>
                <value>
                    <fullName>安徽-铜陵</fullName>
                </value>
                <value>
                    <fullName>安徽-芜湖</fullName>
                </value>
                <value>
                    <fullName>安徽-宣城</fullName>
                </value>
                <value>
                    <fullName>江苏-常熟</fullName>
                </value>
                <value>
                    <fullName>江苏-常州</fullName>
                </value>
                <value>
                    <fullName>江苏-东台</fullName>
                </value>
                <value>
                    <fullName>江苏-淮安</fullName>
                </value>
                <value>
                    <fullName>江苏-淮阴</fullName>
                </value>
                <value>
                    <fullName>江苏-江阴</fullName>
                </value>
                <value>
                    <fullName>江苏-昆山</fullName>
                </value>
                <value>
                    <fullName>江苏-连云港</fullName>
                </value>
                <value>
                    <fullName>江苏-南京</fullName>
                </value>
                <value>
                    <fullName>江苏-南通</fullName>
                </value>
                <value>
                    <fullName>江苏-邳州</fullName>
                </value>
                <value>
                    <fullName>江苏-苏州</fullName>
                </value>
                <value>
                    <fullName>江苏-太仓</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Closer_Workgroup__c</fullName>
        <label>Closer Workgroup</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Comments__c</fullName>
        <label>Comments</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Condition__c</fullName>
        <formula>if(text(Status)==&apos;Closed&apos;, &apos;Closed&apos;, if( Owner:User.Profile.Name==&apos;CSC&amp;FST ASC&apos; || Owner:User.Profile.Name==&apos;CSC&amp;FST CE&apos;,&apos;Open&apos;, if(len(Owner:Queue.QueueName)&gt;0,&apos;Open-Dispatch&apos;,&apos;&apos;)))</formula>
        <label>Condition</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ContactEmail__c</fullName>
        <defaultValue>$User.Email</defaultValue>
        <description>联系人邮箱</description>
        <label>ContactEmail</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>ContactName__c</fullName>
        <defaultValue>$User.FirstName+$User.LastName</defaultValue>
        <description>联系人姓名</description>
        <label>ContactName</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ContactPhone__c</fullName>
        <defaultValue>$User.Phone</defaultValue>
        <description>联系人电话</description>
        <label>ContactPhone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Contact_Email2__c</fullName>
        <description>技术升级</description>
        <label>Email2</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Content1__c</fullName>
        <description>沟通选项中 Option 3 最近一次备份时间</description>
        <label>Content1</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Content2__c</fullName>
        <description>备份方法/介质</description>
        <label>Content2</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Content3__c</fullName>
        <description>沟通第四项的最近一次备份时间</description>
        <label>Content3</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Content_Category__c</fullName>
        <label>Content Category</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>安装问题</fullName>
                </value>
                <value>
                    <fullName>兼容性问题</fullName>
                </value>
                <value>
                    <fullName>配置问题</fullName>
                </value>
                <value>
                    <fullName>固件问题</fullName>
                </value>
                <value>
                    <fullName>驱动问题</fullName>
                </value>
                <value>
                    <fullName>性能问题</fullName>
                </value>
                <value>
                    <fullName>非技术问题</fullName>
                </value>
                <value>
                    <fullName>更换备件</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Content_SubCategory__c</fullName>
        <label>Content SubCategory</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Content_Category__c</controllingField>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>OS</fullName>
                </value>
                <value>
                    <fullName>硬件</fullName>
                </value>
                <value>
                    <fullName>选件</fullName>
                </value>
                <value>
                    <fullName>HW</fullName>
                </value>
                <value>
                    <fullName>第三方硬件或软件</fullName>
                </value>
                <value>
                    <fullName>BIOS</fullName>
                </value>
                <value>
                    <fullName>HDM</fullName>
                </value>
                <value>
                    <fullName>阵列卡</fullName>
                </value>
                <value>
                    <fullName>显卡</fullName>
                </value>
                <value>
                    <fullName>CPU</fullName>
                </value>
                <value>
                    <fullName>内存</fullName>
                </value>
                <value>
                    <fullName>硬盘</fullName>
                </value>
                <value>
                    <fullName>网卡</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Count_SN_IsNull__c</fullName>
        <label>Count SN IsNull</label>
        <summarizedField>Order__c.Count_SN_IsNull__c</summarizedField>
        <summaryForeignKey>Order__c.Work_Order_Name__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Create_Time_Type__c</fullName>
        <formula>if(MOD( DATEVALUE(CreatedDate)  - DATE( 1900, 1, 8 ), 7 )&lt;=4 &amp;&amp; MOD(DATEVALUE(CreatedDate)- DATE( 1900, 1, 8 ), 7 )&gt;=0,
if(
value(text(if(value(MID(TEXT(CreatedDate),12,2))+8&gt;=24,value(mid(text(CreatedDate),12,2))-16,value(MID(TEXT(CreatedDate),12,2))+8))+
MID(TEXT(CreatedDate),15,2))&gt;=830&amp;&amp;value(text(if(value(MID(TEXT(CreatedDate),12,2))+8&gt;=24,value(mid(text(CreatedDate),12,2))-16,value(MID(TEXT(CreatedDate),12,2))+8))+
MID(TEXT(CreatedDate),15,2))&lt;=1800,&apos;Normal&apos;,&apos;Night&apos;),&apos;Weekend&apos;)</formula>
        <label>Create Time Type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Creater_Loginname__c</fullName>
        <formula>CreatedBy.Username</formula>
        <label>Creater Loginname</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Customer_Impact__c</fullName>
        <label>Customer Impact</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>DMR__c</fullName>
        <formula>Case.DMR__c</formula>
        <label>DMR</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>DP_Assign_CE__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>DP_Assign_First_CE</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Work_Orders1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>DP_Queue__c</fullName>
        <label>DP Queue</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DP_TAT_Missed_By_Mins__c</fullName>
        <formula>Dispatch_TAT_Mins__c-  Case.Dp_SLA_Target_Mins__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>DP TAT Missed By Mins</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>DP_WorkGroup__c</fullName>
        <label>DP WorkGroup</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DP__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>DP</label>
        <referenceTo>User</referenceTo>
        <relationshipName>WoToDP</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Delay_Code__c</fullName>
        <label>Delay Code</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DeviceClassName__c</fullName>
        <description>TC 标准设备型号</description>
        <label>DeviceClassName</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Dispatch_TAT_Mins__c</fullName>
        <formula>if(Not(isblank(CSC_REPORT_RCE_USER_Dt__c)),
if(Not(isblank(CSC_REPORT_DP_Dispatch_CE_Dt__c)),
(CSC_REPORT_DP_Dispatch_CE_Dt__c-CSC_REPORT_RCE_USER_Dt__c)*24*60,
(Now()-CSC_REPORT_RCE_USER_Dt__c)*24*60)
,0)</formula>
        <label>Dispatch TAT Mins</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Dispatch_TAT_Missed__c</fullName>
        <formula>if(AND(SLA_Type__c != null,Dispatch_TAT_Mins__c&gt;Dp_SLA_Target_Mins_With_1B__c),1,0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Dispatch TAT Missed</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Dispatch_User_Workgroup__c</fullName>
        <label>Dispatch User Workgroup</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Dispatch_User__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Dispatch User</label>
        <referenceTo>User</referenceTo>
        <relationshipName>WorkOrderToUser</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Dp_SLA_Target_Mins_With_1B__c</fullName>
        <formula>CASE(SLA_Type__c, 
&apos;CTR&apos;, 15, 
&apos;SBD&apos;, 30, 
&apos;NBD&apos;, 90, 
0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Dp SLA Target Mins</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ERT_Resolution_Code__c</fullName>
        <label>ERT Resolution Code</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>Cancel</fullName>
                </value>
                <value>
                    <fullName>CATCH III</fullName>
                </value>
                <value>
                    <fullName>ERT Process</fullName>
                </value>
                <value>
                    <fullName>Multi-Failure</fullName>
                </value>
                <value>
                    <fullName>New Product Issue</fullName>
                </value>
                <value>
                    <fullName>No Knowledge/Complex</fullName>
                </value>
                <value>
                    <fullName>RCA</fullName>
                </value>
                <value>
                    <fullName>Solution Confirm</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Elevate_To_L3__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Elevate To L3</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Elevation_Level1__c</fullName>
        <label>Level1</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Elevation_Level2__c</fullName>
        <label>Level2</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Elevation_Level3__c</fullName>
        <label>Level3</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Elevation_Quality_Issue__c</fullName>
        <label>Elevation Quality Issue</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Insufficient Log</fullName>
                </value>
                <value>
                    <fullName>Unclear Problem Description</fullName>
                </value>
                <value>
                    <fullName>Document missing</fullName>
                </value>
                <value>
                    <fullName>No Troubleshooting</fullName>
                </value>
                <value>
                    <fullName>Known Issue</fullName>
                </value>
                <value>
                    <fullName>NA</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Employee_Number__c</fullName>
        <label>Employee Number</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Entitle_Guaranteed_DT__c</fullName>
        <formula>Case.CSC_Entitle_Guaranteed_DT__c</formula>
        <label>Entitle Guaranteed D/T</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>First_Occurred_Date__c</fullName>
        <label>First Occurred Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Frequency__c</fullName>
        <label>Frequency</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Always: 100%</fullName>
                </value>
                <value>
                    <fullName>Intermittent: 25-99%</fullName>
                </value>
                <value>
                    <fullName>Intermittent &lt;1%</fullName>
                </value>
                <value>
                    <fullName>Intermittent: 1-5%</fullName>
                </value>
                <value>
                    <fullName>Intermittent 5-25%</fullName>
                </value>
                <value>
                    <fullName>Seen Once</fullName>
                </value>
                <value>
                    <fullName>Single Unit Failure</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>HPEQueue__c</fullName>
        <description>技术升级使用的 HPE 那边的Queue List</description>
        <label>HPEQueue</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>H3CElevation</fullName>
                </value>
                <value>
                    <fullName>SAPHANA</fullName>
                </value>
                <value>
                    <fullName>CLOUDSYSTEM</fullName>
                </value>
                <value>
                    <fullName>SDN_SOLUTION</fullName>
                </value>
                <value>
                    <fullName>NFV_SOLUTION</fullName>
                </value>
                <value>
                    <fullName>3PAR 3SC BreakFix</fullName>
                </value>
                <value>
                    <fullName>HPN Licensing</fullName>
                </value>
                <value>
                    <fullName>WWB_L2 BC OpenVMS</fullName>
                </value>
                <value>
                    <fullName>SIMPLIVITY</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>HPE_Case_ID__c</fullName>
        <description>技术升级使用的HPE Case ID</description>
        <label>HPE Case ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>HPE_Case_Status__c</fullName>
        <description>技术升级使用的HPE Case Status</description>
        <label>HPE Case Status</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>HPE_L3__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>L2 PDL</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Work Orders</relationshipLabel>
        <relationshipName>Work_Orders_HPE_L3</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>IdcName__c</fullName>
        <description>TC 机房管理单元</description>
        <label>IdcName</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Immediate_Response_Number__c</fullName>
        <label>Immediate Response Number</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>In_Queue_Date__c</fullName>
        <label>In Queue Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>In_Queue_Duration__c</fullName>
        <formula>If(IsNull(In_Queue_Date__c),&apos;00天：00小时：00分钟&apos;,
If(IsNull(Out_Queue_Date__c),
If(Len(Text(Floor((Now()-In_Queue_Date__c))))=1,&apos;0&apos;+Text(Floor((Now()-In_Queue_Date__c))),Text(Floor((Now()-In_Queue_Date__c))))+&apos;天：&apos;+
Text(Floor((Floor((Now()-In_Queue_Date__c)*24*60)-Floor((Now()-In_Queue_Date__c))*24*60)/60))+&apos;小时：&apos;+
Text(Mod(Floor((Now()-In_Queue_Date__c)*24*60),60))+&apos;分钟&apos;
,
Text(Floor((Out_Queue_Date__c-In_Queue_Date__c)))+&apos;天：&apos;+
Text(Floor((Floor((Out_Queue_Date__c-In_Queue_Date__c)*24*60)-Floor((Out_Queue_Date__c-In_Queue_Date__c))*24*60)/60))+&apos;小时：&apos;+
Text(Mod(Floor((Out_Queue_Date__c-In_Queue_Date__c)*24*60),60))+&apos;分钟&apos;
))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>In Queue Duration</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>In_Queue_Minute__c</fullName>
        <formula>If(IsNull(In_Queue_Date__c),0, 
If(IsNull(Out_Queue_Date__c), 
Floor((Now()-In_Queue_Date__c)*24*60)
, 
Floor((Out_Queue_Date__c-In_Queue_Date__c)*24*60) 
))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>In Queue Minute</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>IsAccepted__c</fullName>
        <description>When CE clicked the accept button on the ice app, the flag change the value to Accepted.</description>
        <label>IsAccepted</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>None</fullName>
                    <default>true</default>
                    <label>None</label>
                </value>
                <value>
                    <fullName>Accepted</fullName>
                </value>
                <value>
                    <fullName>Refused</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>IsBackUpTest__c</fullName>
        <defaultValue>false</defaultValue>
        <label>IsBackUpTest</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>IsCeProblemDescription__c</fullName>
        <defaultValue>false</defaultValue>
        <label>IsCeProblemDescription</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>IsCheckContent1_1__c</fullName>
        <defaultValue>false</defaultValue>
        <description>pdf沟通 第一项 不适用</description>
        <label>IsCheckContent1_1</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>IsCheckContent1__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Is CE check No.1 content of Service Report?</description>
        <label>IsCheckContent1</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>IsCheckContent2_1__c</fullName>
        <defaultValue>false</defaultValue>
        <description>对应沟通第二项 不适用</description>
        <label>IsCheckContent2_1</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>IsCheckContent2__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Is CE check No.1 content of Service Report?</description>
        <label>IsCheckContent2</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>IsCheckContent3_1__c</fullName>
        <defaultValue>false</defaultValue>
        <description>对应沟通第三项 不适用</description>
        <label>IsCheckContent3_1</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>IsCheckContent3__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Is CE check No.1 content of Service Report?</description>
        <label>IsCheckContent3</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>IsRedServer__c</fullName>
        <label>IsRedServer</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>是</fullName>
                    <default>true</default>
                    <label>是</label>
                </value>
                <value>
                    <fullName>否</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>IsVerificationRemarks1__c</fullName>
        <defaultValue>false</defaultValue>
        <label>IsVerificationRemarks1</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>IsVerificationRemarks2__c</fullName>
        <defaultValue>false</defaultValue>
        <label>IsVerificationRemarks2</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>IsVerificationRemarks3__c</fullName>
        <defaultValue>false</defaultValue>
        <label>IsVerificationRemarks3</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Is_SubWorkoder__c</fullName>
        <description>是否为工单因重访新开的子单</description>
        <label>Is_SubWorkoder</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>L2_Employeeid__c</fullName>
        <formula>RCE_L2__r.Employee_ID__c</formula>
        <label>L2 Employeeid</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>L3_Engineer_Email__c</fullName>
        <defaultValue>&apos;UH-TSS-CSC-L2-BCSHPSD@h3c.com&apos;</defaultValue>
        <label>L3 Engineer Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Latested_DT__c</fullName>
        <formula>Case.CSC_Latested_DT__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Latested D/T</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Level__c</fullName>
        <label>Level</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Basic</fullName>
                </value>
                <value>
                    <fullName>Intermediate</fullName>
                </value>
                <value>
                    <fullName>Advanced</fullName>
                </value>
                <value>
                    <fullName>None</fullName>
                    <default>true</default>
                    <label>None</label>
                </value>
                <value>
                    <fullName>Blade Matrix</fullName>
                    <isActive>false</isActive>
                    <label>Blade Matrix</label>
                </value>
                <value>
                    <fullName>CCIE</fullName>
                    <isActive>false</isActive>
                    <label>CCIE</label>
                </value>
                <value>
                    <fullName>CCNA</fullName>
                    <isActive>false</isActive>
                    <label>CCNA</label>
                </value>
                <value>
                    <fullName>CCNP</fullName>
                    <isActive>false</isActive>
                    <label>CCNP</label>
                </value>
                <value>
                    <fullName>Expert</fullName>
                    <isActive>false</isActive>
                    <label>Expert</label>
                </value>
                <value>
                    <fullName>H3CNA</fullName>
                    <isActive>false</isActive>
                    <label>H3CNA</label>
                </value>
                <value>
                    <fullName>H3CNE</fullName>
                    <isActive>false</isActive>
                    <label>H3CNE</label>
                </value>
                <value>
                    <fullName>H3CSE-ROUTING &amp; SWITCHING</fullName>
                    <isActive>false</isActive>
                    <label>H3CSE-ROUTING &amp; SWITCHING</label>
                </value>
                <value>
                    <fullName>H3CSE-Storage</fullName>
                    <isActive>false</isActive>
                    <label>H3CSE-Storage</label>
                </value>
                <value>
                    <fullName>HP AIS-Network Infrastructure</fullName>
                    <isActive>false</isActive>
                    <label>HP AIS-Network Infrastructure</label>
                </value>
                <value>
                    <fullName>Trained</fullName>
                    <isActive>false</isActive>
                    <label>Trained</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Log_Notes__c</fullName>
        <description>Only for RCE L2</description>
        <label>Log Notes</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Mission_Critical__c</fullName>
        <defaultValue>false</defaultValue>
        <description>elevation flow, use it to identity this work order is Mission Critical to send to hpe</description>
        <label>Mission Critical</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>NGMS_Duration__c</fullName>
        <label>NGMS_Duration</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>true</fullName>
                    <default>true</default>
                    <label>true</label>
                </value>
                <value>
                    <fullName>false</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>NMU__c</fullName>
        <formula>If(X_Failure_Code_74_Count__c==0 &amp;&amp; 
Text(CSC_Subcase_Repair_Class_Code__c)!=&apos;CO&apos;,1,0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>NMU</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Now__c</fullName>
        <label>Now</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>OTC__c</fullName>
        <formula>Text(Case.CSC_OTC__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>OTC</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OnSite__c</fullName>
        <formula>IF(AND((RecordType.DeveloperName=&apos;Onsite_With_Parts&apos;||
RecordType.DeveloperName=&apos;Onsite_Without_Parts&apos;),(Owner:User.Profile.Name=&apos;CSC&amp;FST ASC&apos; || Owner:User.Profile.Name=&apos;CSC&amp;FST CE&apos;)) 
, true, false)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>OnSite</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>OperatingSystem__c</fullName>
        <label>Operating System</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>AIX</fullName>
                </value>
                <value>
                    <fullName>CentOS</fullName>
                </value>
                <value>
                    <fullName>Citrix</fullName>
                </value>
                <value>
                    <fullName>Comware</fullName>
                </value>
                <value>
                    <fullName>HPE-UX</fullName>
                </value>
                <value>
                    <fullName>Inform OS</fullName>
                </value>
                <value>
                    <fullName>Lefthand OS</fullName>
                </value>
                <value>
                    <fullName>Linux - CentOS</fullName>
                </value>
                <value>
                    <fullName>Linux - Other</fullName>
                </value>
                <value>
                    <fullName>Linux - Red Hat</fullName>
                </value>
                <value>
                    <fullName>Linux - SUSE</fullName>
                </value>
                <value>
                    <fullName>Linux - Ubuntu</fullName>
                </value>
                <value>
                    <fullName>MSM</fullName>
                </value>
                <value>
                    <fullName>Not Applicable</fullName>
                </value>
                <value>
                    <fullName>OneView</fullName>
                </value>
                <value>
                    <fullName>OpenVMS/Alpha</fullName>
                </value>
                <value>
                    <fullName>OpenVMS/IA64</fullName>
                </value>
                <value>
                    <fullName>OpenVMS/Vax</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
                <value>
                    <fullName>Provision</fullName>
                </value>
                <value>
                    <fullName>SANiQ</fullName>
                </value>
                <value>
                    <fullName>SUN OS/Solaris</fullName>
                </value>
                <value>
                    <fullName>VMWare</fullName>
                </value>
                <value>
                    <fullName>Windows</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Operating_System_Version__c</fullName>
        <label>Operating System Version</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Order_Count__c</fullName>
        <label>Order Count</label>
        <summaryForeignKey>Order__c.Work_Order_Name__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Out_Queue_Date__c</fullName>
        <label>Out Queue Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Owner_Is_Queue__c</fullName>
        <formula>Owner:User.Username</formula>
        <label>Owner Is Queue</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PartInputTime__c</fullName>
        <description>TC 部件入库时间</description>
        <label>PartInputTime</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Phase_II_Flag__c</fullName>
        <formula>Case.Phase_II_flag__c</formula>
        <label>Phase II Flag</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>PosCode__c</fullName>
        <label>PosCode</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Previous_Owner__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Previous Owner</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Work_Orders</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ProblemDescription__c</fullName>
        <label>ProblemDescription</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Problem_Analysis__c</fullName>
        <label>Problem Analysis</label>
        <type>TextArea</type>
    </fields>
</CustomObject>